# pysidekick-ui

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
