[tool.poetry]
name = "pysidekick-ui"
version = "0.1.0"
description = "A library of reusable, customizable PySide2 and PySide6 widgets for Tech Art tools in DCC apps."
authors = ["Michael <mfernandez@sweettastebuds>"]
license = "APACHE-2.0"
readme = "README.md"

packages = [
  { include = "pysidekick_ui", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
PySide2 = "^5.15 || ^6.0"
PySide6 = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
pre-commit = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"